--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Section 2: Fondamentaux du langage JavaScript</title>
+        <title>Section 2: JavaScript Language Basics</title>
     </head>
 
     <body>
-        <h1>Section 2: Fondamentaux du langage JavaScript</h1>
-        <script src="starter/script014.js"></script>
+        <h1>Section 2: JavaScript Language Basics</h1>
+        <script src="starter/script015.js"></script>
     </body>
 </html>
