--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
     <body>
         <h1>Section 2: JavaScript Language Basics</h1>
-        <script src="starter/tests-p2-restosDuCoeur.js"></script>
+        <script src="starter/tests-p3-kw.js"></script>
     </body>
 </html>
